src/objects/Team__c.object
<CustomObject>
    <fields>
        <fullName>Business_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSO_Salesforce_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSO Salesforce Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teams1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSO_Salesforce_Launch__c</fullName>
        <label>GSO Salesforce Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Tool__c</fullName>
        <label>Previous Tool</label>
        <picklist>
            <picklistValues>
                <fullName>Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG Salesforce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Developer_Name__c</fullName>
        <label>Record Type Developer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>